paper_experimental_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/fun_decl_3/sample_005/target.compile.log
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `lazy_static`
 --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/fun_decl_3/sample_005/target.rs:3:1
  |
3 | lazy_static::lazy_static! {
  | ^^^^^^^^^^^ use of unresolved module or unlinked crate `lazy_static`

error[E0425]: cannot find value `G_SEED` in this scope
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/fun_decl_3/sample_005/target.rs:16:6
   |
16 |     *G_SEED.borrow() + x + 1000
   |      ^^^^^^ not found in this scope

error[E0425]: cannot find value `G_SEED` in this scope
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/fun_decl_3/sample_005/target.rs:20:6
   |
20 |     *G_SEED.borrow() + x - 2000
   |      ^^^^^^ not found in this scope

error[E0425]: cannot find value `G_SEED` in this scope
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/fun_decl_3/sample_005/target.rs:25:6
   |
25 |     *G_SEED.borrow_mut() = pf(t) + k;
   |      ^^^^^^ not found in this scope

error[E0425]: cannot find value `G_SEED` in this scope
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/fun_decl_3/sample_005/target.rs:26:9
   |
26 |     if *G_SEED.borrow() & 1 == 0 {
   |         ^^^^^^ not found in this scope

warning: unused import: `std::cell::RefCell`
 --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/fun_decl_3/sample_005/target.rs:1:5
  |
1 | use std::cell::RefCell;
  |     ^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error: aborting due to 5 previous errors; 1 warning emitted

Some errors have detailed explanations: E0425, E0433.
For more information about an error, try `rustc --explain E0425`.